--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="images/logo.png" class="logo" alt="">
         <div class="banner-text">
             <h1>Effect Hair</h1>
-            <p>Style Your Hair Is Style Your Life</p>
+            <p>Style Your Hair is Style Your Life</p>
             <div class="banner-btn">
                 <a href="#"><span></span>Find Out</a>
                 <a href="#"><span></span>Read More</a>
